PYIC-7895 Fix code coverage for Sonarcloud

--- a/lambdas/validate-appconfig/build.gradle
+++ b/lambdas/validate-appconfig/build.gradle
@@ -18,5 +18,13 @@ dependencies {
 }
 
 test {
-	useJUnitPlatform()
+	useJUnitPlatform ()
+	finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required.set(true)
+	}
 }
