PYIC-8235: Add IPVCoreAnalyticsDeployment resource

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -902,8 +902,15 @@ Resources:
       Name: !Sub IPVCoreAnalyticsAPIKey-${Environment}
       Enabled: true
 
+  IPVCoreAnalyticsDeployment:
+    Type: AWS::ApiGateway::Deployment
+    Properties:
+      RestApiId: !Ref IPVCoreAnalyticsAPI
+      StageName: !Sub ${Environment}
+
   IPVCoreAnalyticsUsagePlan:
     Type: AWS::ApiGateway::UsagePlan
+    DependsOn: IPVCoreAnalyticsDeployment
     Properties:
       UsagePlanName: !Sub IPVCoreAnalyticsUsagePlan-${Environment}
       ApiStages:
