PYIC-8235: Add DependsOn: IPVCoreAnalyticsDeployment to IPVCoreAnalyticsBasePathMapping

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -975,6 +975,7 @@ Resources:
 
   IPVCoreAnalyticsBasePathMapping:
     Type: AWS::ApiGateway::BasePathMapping
+    DependsOn: IPVCoreAnalyticsDeployment
     Properties:
       DomainName: !Ref IPVCoreAnalyticsDomain
       RestApiId: !Ref IPVCoreAnalyticsAPI
