PYIC-8235: Enable CORS for analytics gateway and update journey map config

--- a/openAPI/core-back-analytics.yaml
+++ b/openAPI/core-back-analytics.yaml
@@ -8,6 +8,17 @@ info:
 security:
   - apiKey: []
 
+x-amazon-apigateway-cors:
+  allowOrigins:
+    - "*"
+  allowHeaders:
+    - "Content-Type"
+    - "X-Api-Key"
+  allowMethods:
+    - "OPTIONS"
+    - "GET"
+    - "POST"
+
 paths:
   /journey-transitions:
     post:
