--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -318,6 +318,10 @@ Resources:
               Value: '{{resolve:ssm:/journey-map/JOURNEY_MAP_USERNAME}}'
             - Name: JOURNEY_MAP_PASSWORD
               Value: '{{resolve:ssm:/journey-map/JOURNEY_MAP_PASSWORD}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT
+              Value: '{{resolve:ssm:/journeyMap/FETCH_JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY
+              Value: '{{resolve:ssm:/journeyMap/ANALYTICS_API_KEY}}' #pragma: allowlist secret
           PortMappings:
             - ContainerPort: 8080
               Protocol: tcp
@@ -327,12 +331,6 @@ Resources:
               awslogs-group: !Ref ECSAccessLogsGroup
               awslogs-region: !Sub ${AWS::Region}
               awslogs-stream-prefix: !Sub journey-map-${Environment}
-          Environment:
-            - Name: JOURNEY_TRANSITIONS_ENDPOINT
-              Value: '{{resolve:ssm:/journeyMap/core/transitionsUrl}}'
-          Secrets:
-            - Name: ANALYTICS_API_KEY
-              ValueFrom: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:analyticsApiKey #pragma: allowlist secret
       Cpu: "256"
       Memory: "512"
       ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
@@ -369,16 +367,6 @@ Resources:
                 Resource:
                   - !GetAtt "ECSAccessLogsGroup.Arn"
                   - !Sub "${ECSAccessLogsGroup.Arn}:*"
-              - Effect: Allow
-                Action:
-                  - "ssm:GetParameter"
-                Resource:
-                  - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/journeyMap/core/transitionsUrl
-              - Effect: Allow
-                Action:
-                  - "secretsmanager:GetSecretValue" #pragma: allowlist secret
-                Resource:
-                  - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:analyticsApiKey* #pragma: allowlist secret
       PermissionsBoundary: !If
         - UsePermissionsBoundary
         - !Ref PermissionsBoundary
