--- a/lambdas/check-reverification-identity/build.gradle
+++ b/lambdas/check-reverification-identity/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	alias libs.plugins.postCompileWeaving
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 	implementation libs.bundles.awsLambda,
 			project(":libs:common-services"),
@@ -18,6 +22,9 @@ dependencies {
 			project(path: ":libs:test-helpers"),
 			project(path: ":libs:common-services", configuration: "tests")
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
 
 	testRuntimeOnly(libs.junitPlatform)
 }
@@ -30,6 +37,7 @@ java {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 jacocoTestReport {
