--- a/lambdas/process-mobile-app-callback/build.gradle
+++ b/lambdas/process-mobile-app-callback/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	alias libs.plugins.postCompileWeaving
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 
 	implementation libs.bundles.awsLambda,
@@ -21,6 +25,10 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly libs.junitPlatform
 }
 
@@ -32,6 +40,7 @@ java {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 	exclude 'uk/gov/di/ipv/core/processmobileappcallback/pact/**'
 }
 
