--- a/libs/common-services/build.gradle
+++ b/libs/common-services/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	id "jacoco"
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 	api libs.nimbusdsOauth2OidcSdk,
 			libs.diVocab
@@ -33,6 +37,10 @@ dependencies {
 			libs.hamcrest,
 			project(path: ':libs:test-data')
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly libs.junitPlatform
 
 	testCompileOnly libs.lombok
@@ -60,6 +68,7 @@ tasks.named('jar') {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 jacocoTestReport {
