--- a/lambdas/check-mobile-app-vc-receipt/build.gradle
+++ b/lambdas/check-mobile-app-vc-receipt/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	alias libs.plugins.postCompileWeaving
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 
 	implementation libs.bundles.awsLambda,
@@ -27,6 +31,10 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly libs.junitPlatform
 }
 
@@ -38,6 +46,7 @@ java {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 	exclude 'uk/gov/di/ipv/core/checkmobileappvcreceipt/pact/**'
 }
 
