--- a/lambdas/manual-f2f-pending-reset/build.gradle
+++ b/lambdas/manual-f2f-pending-reset/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	alias libs.plugins.postCompileWeaving
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 	implementation platform(libs.awsSdkBom),
 			libs.awsSdkDynamodb,
@@ -19,6 +23,10 @@ dependencies {
 			libs.hamcrest,
 			project(path: ':libs:test-helpers')
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly libs.junitPlatform
 }
 
@@ -30,6 +38,7 @@ java {
 test {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 jacocoTestReport {
