--- a/lambdas/process-cri-callback/build.gradle
+++ b/lambdas/process-cri-callback/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	alias libs.plugins.postCompileWeaving
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 
 	implementation libs.bundles.awsLambda,
@@ -29,6 +33,10 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(':libs:test-helpers',)
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly libs.junitPlatform
 }
 
@@ -40,6 +48,7 @@ java {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 	exclude 'uk/gov/di/ipv/core/processcricallback/pact/**'
 }
 
