--- a/libs/ais-service/build.gradle
+++ b/libs/ais-service/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	id "jacoco"
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 	implementation libs.apacheHttpCore,
 			libs.bundles.log4j,
@@ -20,6 +24,10 @@ dependencies {
 			libs.pactConsumerJunit,
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
+
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
 
 	testRuntimeOnly libs.junitPlatform
 }
@@ -45,6 +53,7 @@ tasks.named('jar') {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 task pactConsumerTests (type: Test) {
