--- a/libs/test-helpers/build.gradle
+++ b/libs/test-helpers/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	id "jacoco"
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 	implementation libs.bundles.awsLambda,
 			libs.jacksonDatabind,
@@ -19,6 +23,10 @@ dependencies {
 	testImplementation libs.junitJupiter,
 			libs.hamcrest,
 			libs.mockitoJunit
+
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
 
 	testRuntimeOnly libs.junitPlatform
 }
@@ -44,6 +52,7 @@ tasks.named('jar') {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 jacocoTestReport {
