--- a/libs/ticf-cri-service/build.gradle
+++ b/libs/ticf-cri-service/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id "jacoco"
 }
 
+configurations {
+	mockitoAgent
+}
+
 dependencies {
 
 	implementation libs.bundles.awsLambda,
@@ -20,6 +24,10 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
+	mockitoAgent(libs.mockitoCore) {
+		transitive = false
+	}
+
 	testRuntimeOnly(libs.junitPlatform)
 }
 
@@ -31,6 +39,7 @@ java {
 test {
 	useJUnitPlatform ()
 	finalizedBy jacocoTestReport
+	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
 }
 
 task pactConsumerTests (type: Test) {
