PYIC-8573: Add ClientOAuthSessionTable write policy to check-existing-identity

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -2426,6 +2426,8 @@ Resources:
         - DynamoDBReadPolicy:
             TableName: !Ref ClientOAuthSessionsTable
         - DynamoDBWritePolicy:
+            TableName: !Ref ClientOAuthSessionsTable
+        - DynamoDBWritePolicy:
             TableName: !Ref SessionCredentialsTable
         - SSMParameterReadPolicy:
             ParameterName: !Sub ${Environment}/core/*
