--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -3,8 +3,8 @@ core:
   self:
     configFormat: "yaml"
     componentId: "https://identity.local.account.gov.uk"
-    signingKeyId: "some-signin-id"
-    sisSigningKeyId: "dummy-value"
+    signingKeyId: "0faa6b9e-f148-4de9-afd0-445de70334ef"
+    sisSigningKeyId: "383e1fda-574b-4de5-b066-0fd020d282f0"
     audienceForClients: "https://identity.local.account.gov.uk"
     jwtTtlSeconds: 3600
     maxAllowedAuthClientTtl: 3600
