--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -369,6 +369,7 @@ core:
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
     storedIdentityServiceEnabled: false
+    sisVerificationEnabled: false
     accountInterventionsEnabled: true
   features:
     testFeature:
@@ -383,6 +384,9 @@ core:
     storedIdentityService:
       featureFlags:
         storedIdentityServiceEnabled: true
+    sisVerification:
+      featureFlags:
+        sisVerificationEnabled: true
     mfaReset:
       featureFlags:
         mfaResetEnabled: true
