--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3725,6 +3725,44 @@ Resources:
             Period: 60
             Stat: Sum
 
+  DwpKbvCriReturnRateAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${AWS::StackName}-DwpKbvCriReturnRateAlarm
+      AlarmDescription: "Alarm if DWP KBV CRI return rate is 0 for 3 consecutive 5-minute windows"
+      ActionsEnabled: true
+      AlarmActions:
+        - !ImportValue alarm-alerts-topic
+      EvaluationPeriods: 3
+      Threshold: 0
+      ComparisonOperator: LessThanOrEqualToThreshold
+      TreatMissingData: notBreaching
+      Metrics:
+        - Id: redirect
+          MetricStat:
+            Metric:
+              Namespace: CoreBackEmbeddedMetrics-build
+              MetricName: criRedirect
+              Dimensions:
+                - Name: cri
+                  Value: dwpKbv
+            Period: 300
+            Stat: Sum
+        - Id: returned
+          MetricStat:
+            Metric:
+              Namespace: CoreBackEmbeddedMetrics-build
+              MetricName: criReturn
+              Dimensions:
+                - Name: cri
+                  Value: dwpKbv
+            Period: 300
+            Stat: Sum
+        - Id: returnRate
+          Expression: "returned / redirect"
+          Label: "DWP KBV CRI Return Rate"
+          ReturnData: true
+
   IssueClientAccessTokenFunctionIOExceptionMetricFilter:
     Type: AWS::Logs::MetricFilter
     Properties:
