PYIC-8380: Revert local running SIS config to fix API tests

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -367,7 +367,7 @@ core:
     sqsAsync: true
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
-    storedIdentityServiceEnabled: true
+    storedIdentityServiceEnabled: false
     sisVerificationEnabled: false
     accountInterventionsEnabled: true
 
