PYIC-8381: add sis applicationUrl to local config

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -100,6 +100,8 @@ core:
     apiBaseUrl: "https://cimit-api.stubs.account.gov.uk"
   evcs:
     applicationUrl: "https://evcs.stubs.account.gov.uk"
+  sis:
+    applicationUrl: "https://sis.stubs.account.gov.uk"
   storedIdentityService:
     componentId: "https://reuse-identity.build.account.gov.uk"
   credentialIssuers:
