PYIC-8235: Use test-parameters.yaml to create system settings lambda test

--- a/lambdas/fetch-system-settings/build.gradle
+++ b/lambdas/fetch-system-settings/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 	implementation libs.bundles.awsLambda,
 			libs.awsLambdaJavaCore,
 			libs.lombok,
-			project(":libs:common-services")
+			project(":libs:common-services"),
+			project(":libs:test-data")
 	testImplementation libs.hamcrest,
 			libs.junitJupiter,
 			libs.mockitoJunit
