--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3489,6 +3489,62 @@ Resources:
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${IPVCoreAnalyticsAPI}/*/POST/journey-transitions"
 
+  FetchSystemSettingsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      # checkov:skip=CKV_AWS_115: We do not have enough data to allocate the concurrent execution allowance per function.
+      # checkov:skip=CKV_AWS_116: Lambdas invoked via API Gateway do not support Dead Letter Queues.
+      # checkov:skip=CKV_AWS_117: Lambdas will migrate to our own VPC in future work.
+      FunctionName: !Sub "fetch-system-settings-${Environment}"
+      Handler: uk.gov.di.ipv.core.fetchsystemsettings.FetchSystemSettingsHandler::handleRequest
+      PackageType: Zip
+      CodeUri: ../lambdas/fetch-system-settings
+      Tracing: Active
+      Environment:
+        # checkov:skip=CKV_AWS_173: These environment variables do not require encryption.
+        Variables:
+          POWERTOOLS_SERVICE_NAME: !Sub fetch-system-settings-${Environment}
+      VpcConfig:
+        SubnetIds:
+          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
+          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
+        SecurityGroupIds:
+          - !GetAtt LambdaSecurityGroup.GroupId
+      Policies:
+        - VPCAccessPolicy: { }
+      Events:
+        IPVCoreAnalyticsAPIJourneyTransitions:
+          Type: Api
+          Properties:
+            RestApiId: !Ref IPVCoreAnalyticsAPI
+            Path: /system-settings
+            Method: POST
+      AutoPublishAlias: live
+
+  FetchSystemSettingsFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    # checkov:skip=CKV_AWS_158: No need for customer managed keys for short lived logs
+    Properties:
+      RetentionInDays: 30
+      LogGroupName: !Sub "/aws/lambda/fetch-system-settings-${Environment}"
+
+  FetchSystemSettingsFunctionLogGroupSubscriptionFilter:
+    Type: AWS::Logs::SubscriptionFilter
+    Condition: IsStagingIntProd
+    Properties:
+      DestinationArn: "arn:aws:logs:eu-west-2:885513274347:destination:csls_cw_logs_destination_prodpython"
+      FilterPattern: ""
+      LogGroupName: !Ref FetchSystemSettingsFunctionLogGroup
+
+  FetchSystemSettingsFunctionPermission:
+    Type: AWS::Lambda::Permission
+    DependsOn: FetchSystemSettingsFunction
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref FetchJourneyTransitionsFunction.Alias
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${IPVCoreAnalyticsAPI}/*/POST/system-settings"
+
   SessionCredentialsTable:
     Type: AWS::DynamoDB::Table
     Properties:
