--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ include "lambdas",
 		"libs:cri-response-service",
 		"libs:cri-storing-service",
 		"libs:evcs-service",
+		"libs:sis-service",
 		"libs:gpg45-evaluator",
 		"libs:test-data",
 		"libs:test-helpers",
