--- a/libs/common-services/build.gradle
+++ b/libs/common-services/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 			libs.awsSdkDynamodbEnhanced,
 			libs.awsSdkKms,
 			libs.awsSdkAppConfigData,
+			libs.awsSdkCrtClient,
 			libs.commonsCodec,
 			libs.commonsCollections,
 			libs.jacksonDatabind,
