--- a/libs/cimit-service/build.gradle
+++ b/libs/cimit-service/build.gradle
@@ -8,7 +8,7 @@ plugins {
 dependencies {
 	implementation platform(libs.awsSdkBom),
 			libs.apacheHttpCore,
-			libs.awsSdkUrlConnectionClient,
+			libs.awsSdkCrtClient,
 			libs.jacksonDatabind,
 			libs.powertoolsLogging,
 			libs.powertoolsParameters,
