PYIC-7878: migrate from getParameter to typed getConfiguration + test helpers
- Replaced string-path ConfigService.getParameter(...) calls with strongly-typed access via configService.getConfiguration() (e.g. getConfiguration().getSelf().getComponentId()), using the YAML→POJO model backed by AWS AppConfig.
- Stubbed the full config graph in tests (Config → InternalOperationsConfig → VotCiThresholdsConfig, etc.) and added a small helper (ConfigServiceHelper / stubDefaultComponentIdConfig) to seed common fields

--- a/libs/common-services/build.gradle
+++ b/libs/common-services/build.gradle
@@ -10,6 +10,7 @@ configurations {
 }
 
 dependencies {
+	testImplementation project(path: ':libs:test-helpers')
 	api libs.nimbusdsOauth2OidcSdk,
 			libs.diVocab
 	implementation platform(libs.awsSdkBom),
