--- a/libs/cri-storing-service/build.gradle
+++ b/libs/cri-storing-service/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 			project(":libs:common-services"),
 			project(":libs:verifiable-credentials")
 
+	testImplementation project(':libs:test-helpers')
 	api project(":libs:cri-response-service")
 
 	testImplementation libs.junitJupiter,
