PYIC-8101: Add AppConfigAccess to FetchSystemSettingsFunction

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3514,6 +3514,15 @@ Resources:
           - !GetAtt LambdaSecurityGroup.GroupId
       Policies:
         - VPCAccessPolicy: { }
+        - Statement:
+            - Sid: AppConfigAccess
+              Effect: Allow
+              Action:
+                - appconfig:StartConfigurationSession
+                - appconfig:GetLatestConfiguration
+              Resource:
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
       Events:
         IPVCoreAnalyticsAPIJourneyTransitions:
           Type: Api
