--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3726,6 +3726,7 @@ Resources:
             Stat: Sum
 
   DwpKbvCriReturnRateAlarm:
+    Condition: IsNotDevelopment
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub ${AWS::StackName}-DwpKbvCriReturnRateAlarm
