--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include "lambdas",
 		"lambdas:check-gpg45-score",
 		"lambdas:check-reverification-identity",
 		"lambdas:fetch-journey-transitions",
+		"lambdas:fetch-system-settings",
 		"lambdas:initialise-ipv-session",
 		"lambdas:issue-client-access-token",
 		"lambdas:process-async-cri-credential",
@@ -61,5 +62,3 @@ dependencyResolutionManagement {
 		}
 	}
 }
-
-include 'lambdas:fetch-system-settings'
