PYIC-8627: Set storecIdentityServiceEnabled flag to true.

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -369,7 +369,7 @@ core:
     sqsAsync: true
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
-    storedIdentityServiceEnabled: false
+    storedIdentityServiceEnabled: true
     accountInterventionsEnabled: true
 
   features:
