--- a/local-running/build.gradle
+++ b/local-running/build.gradle
@@ -7,6 +7,7 @@ plugins {
 dependencies {
 	implementation platform(libs.awsSdkBom),
 			libs.awsSdkSqs,
+			libs.lombok,
 			libs.awsSdkCrtClient,
 			libs.bundles.awsLambda,
 			libs.bundles.log4j,
