PYIC-8101: - PR markups - Adjust alpha formula

--- a/lambdas/fetch-journey-transitions/build.gradle
+++ b/lambdas/fetch-journey-transitions/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 	implementation libs.bundles.awsLambda,
 			libs.awsLambdaJavaCore,
 			libs.lombok,
-			libs.awsSdkLogs
+			libs.awsSdkLogs,
+			project(":libs:common-services")
 	testImplementation libs.hamcrest,
 			libs.junitJupiter,
 			libs.mockitoJunit
