--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -320,6 +320,8 @@ Resources:
               Value: '{{resolve:ssm:/journey-map/JOURNEY_MAP_PASSWORD}}'
             - Name: JOURNEY_TRANSITIONS_ENDPOINT
               Value: '{{resolve:ssm:/journeyMap/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT
+              Value: '{{resolve:ssm:/journey-map/SYSTEM_SETTINGS_ENDPOINT}}'
             - Name: ANALYTICS_API_KEY
               Value: '{{resolve:ssm:/journeyMap/ANALYTICS_API_KEY}}'
           PortMappings:
