--- a/local-running/build.gradle
+++ b/local-running/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 			project(":libs:audit-service"),
 			project(":libs:cimit-service"),
 			project(":libs:common-services"),
+			project(path: ':libs:common-services', configuration: 'tests'),
 			project(":libs:cri-response-service"),
 			project(":libs:gpg45-evaluator"),
 			project(":libs:user-identity-service"),
