PYIC-8593: Change api input params. Move Transitions form outside the configuration form.

--- a/openAPI/core-back-analytics.yaml
+++ b/openAPI/core-back-analytics.yaml
@@ -24,12 +24,20 @@ paths:
     post:
       description: "Endpoint for fetching journey transitions for journey map analysis"
       parameters:
-        - name: minutes
+        - name: fromDate
           in: query
-          required: false
+          required: true
           schema:
-            type: integer
-          description: "Number of minutes to look back"
+            type: string
+            format: date-time
+          description: "Start date and time from which result should be fetched. Must be in YYYY-MM-DDT00:00 format"
+        - name: toDate
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+          description: "End date and time from which result should be fetched. Must be in YYYY-MM-DDT00:00 format"
         - name: limit
           in: query
           required: false
