PYIC-8593: Add input parsing in lambda for journey/session id

--- a/openAPI/core-back-analytics.yaml
+++ b/openAPI/core-back-analytics.yaml
@@ -50,7 +50,7 @@ paths:
           schema:
             type: string
           description: "Session ID to filter journey transitions"
-        - name: journeyId
+        - name: govukJourneyId
           in: query
           required: false
           schema:
