PYIC-8593: Add target environment selection for transitions traffic

--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,7 @@ api-tests/.env*
 !api-tests/.env.local
 !api-tests/.env.devShared
 !api-tests/.env.build
+journey-map/.env*
+!journey-map/.env.template
 
 journey-map/public/application.js*
