--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -318,12 +318,38 @@ Resources:
               Value: '{{resolve:ssm:/journey-map/JOURNEY_MAP_USERNAME}}'
             - Name: JOURNEY_MAP_PASSWORD
               Value: '{{resolve:ssm:/journey-map/JOURNEY_MAP_PASSWORD}}'
-            - Name: JOURNEY_TRANSITIONS_ENDPOINT
-              Value: '{{resolve:ssm:/journey-map/JOURNEY_TRANSITIONS_ENDPOINT}}'
-            - Name: SYSTEM_SETTINGS_ENDPOINT
-              Value: '{{resolve:ssm:/journey-map/SYSTEM_SETTINGS_ENDPOINT}}'
-            - Name: ANALYTICS_API_KEY
-              Value: '{{resolve:ssm:/journey-map/ANALYTICS_API_KEY}}'
+            - Name: MAXIMUM_TIME_RANGE_MS
+              Value: '{{resolve:ssm:/journey-map/MAXIMUM_TIME_RANGE_MS}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT_PRODUCTION
+              Value: '{{resolve:ssm:/journey-map/env/production/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT_PRODUCTION
+              Value: '{{resolve:ssm:/journey-map/env/production/SYSTEM_SETTINGS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY_PRODUCTION
+              Value: '{{resolve:ssm:/journey-map/env/production/ANALYTICS_API_KEY}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT_INTEGRATION
+              Value: '{{resolve:ssm:/journey-map/env/integration/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT_INTEGRATION
+              Value: '{{resolve:ssm:/journey-map/env/integration/SYSTEM_SETTINGS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY_INTEGRATION
+              Value: '{{resolve:ssm:/journey-map/env/integration/ANALYTICS_API_KEY}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT_STAGING
+              Value: '{{resolve:ssm:/journey-map/env/staging/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT_STAGING
+              Value: '{{resolve:ssm:/journey-map/env/staging/SYSTEM_SETTINGS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY_STAGING
+              Value: '{{resolve:ssm:/journey-map/env/staging/ANALYTICS_API_KEY}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT_BUILD
+              Value: '{{resolve:ssm:/journey-map/env/build/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT_BUILD
+              Value: '{{resolve:ssm:/journey-map/env/build/SYSTEM_SETTINGS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY_BUILD
+              Value: '{{resolve:ssm:/journey-map/env/build/ANALYTICS_API_KEY}}'
+            - Name: JOURNEY_TRANSITIONS_ENDPOINT_SHARED_DEV
+              Value: '{{resolve:ssm:/journey-map/env/dev01/JOURNEY_TRANSITIONS_ENDPOINT}}'
+            - Name: SYSTEM_SETTINGS_ENDPOINT_SHARED_DEV
+              Value: '{{resolve:ssm:/journey-map/env/dev01/SYSTEM_SETTINGS_ENDPOINT}}'
+            - Name: ANALYTICS_API_KEY_SHARED_DEV
+              Value: '{{resolve:ssm:/journey-map/env/dev01/ANALYTICS_API_KEY}}'
           PortMappings:
             - ContainerPort: 8080
               Protocol: tcp
