PYIC-7878: Replace and add local running config parameters values

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -4,8 +4,10 @@
 core:
   self:
     componentId: "https://identity.local.account.gov.uk"
-    signingKeyId: "some-signin-id"
-    sisSigningKeyId: "dummy-value"
+    signingKeyId: "00000000-0000-0000-0000-000000000000"
+    sisSigningKeyId: "00000000-0000-0000-0000-000000000000"
+    clientJarKmsEncryptionKeyAliasPrimary: "CoreEncryptionKey1"
+    clientJarKmsEncryptionKeyAliasSecondary: "CoreEncryptionKey2"
     audienceForClients: "https://identity.local.account.gov.uk"
     jwtTtlSeconds: 3600
     maxAllowedAuthClientTtl: 3600
