PYIC-8667: Add environment variable condition for config env and profile ids to point to new app config

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -19,8 +19,14 @@ Globals:
           - IsDevelopment
           - !Sub "core-${Environment}"
           - !Sub "core-back-${Environment}"
-        APP_CONFIG_ENVIRONMENT_ID: !Sub "core-back-${Environment}"
-        APP_CONFIG_PROFILE_ID: !Sub "core-back-${Environment}"
+        APP_CONFIG_ENVIRONMENT_ID: !If
+          - IsDevelopment
+          - !Sub "core-${Environment}"
+          - !Sub "core-back-${Environment}"
+        APP_CONFIG_PROFILE_ID: !If
+          - IsDevelopment
+          - !Sub "core-${Environment}"
+          - !Sub "core-back-${Environment}"
         DT_CONNECTION_BASE_URL: !If
           - UseDynatrace
           - !Sub
